// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stateful behavior > Should merge skipped fields with previous values 1`] = `
Promise {
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_statement_1",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "field_statement_1",
      "path": [
        "field_1",
      ],
    },
  ],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 1,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_1",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_5": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`Stateful behavior > Should merge skipped fields with previous values 2`] = `
Promise {
  "dump": [Function],
  "errorCount": 3,
  "errors": [
    SummaryItem {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_statement_1",
    },
    SummaryItem {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_5",
    },
    SummaryItem {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_6",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "field_statement_1",
      "path": [
        "field_1",
      ],
    },
    {
      "message": "field_statement_5",
      "path": [
        "field_5",
      ],
    },
    {
      "message": "field_statement_6",
      "path": [
        "field_5",
      ],
    },
  ],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_1",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_5": {
      "errorCount": 2,
      "errors": [
        "field_statement_5",
        "field_statement_6",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`Stateful behavior > Should merge skipped fields with previous values 3`] = `
Promise {
  "dump": [Function],
  "errorCount": 4,
  "errors": [
    SummaryItem {
      "fieldName": "field_1",
      "groupName": undefined,
      "message": "field_statement_1",
    },
    SummaryItem {
      "fieldName": "field_2",
      "groupName": undefined,
      "message": "field_statement_2",
    },
    SummaryItem {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_5",
    },
    SummaryItem {
      "fieldName": "field_5",
      "groupName": undefined,
      "message": "field_statement_6",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "field_statement_1",
      "path": [
        "field_1",
      ],
    },
    {
      "message": "field_statement_2",
      "path": [
        "field_2",
      ],
    },
    {
      "message": "field_statement_5",
      "path": [
        "field_5",
      ],
    },
    {
      "message": "field_statement_6",
      "path": [
        "field_5",
      ],
    },
  ],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 7,
  "tests": {
    "field_1": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_1",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_2": SummaryBase {
      "errorCount": 1,
      "errors": [
        "field_statement_2",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "field_3": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
    "field_4": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": true,
      "warnCount": 1,
      "warnings": [
        "field_statement_4",
      ],
    },
    "field_5": {
      "errorCount": 2,
      "errors": [
        "field_statement_5",
        "field_statement_6",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 1,
  "warnings": [
    SummaryItem {
      "fieldName": "field_4",
      "groupName": undefined,
      "message": "field_statement_4",
    },
  ],
}
`;

exports[`more complex > Should run correctly 1`] = `
{
  "dump": [Function],
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 0,
  "tests": {},
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`more complex > Should run correctly 2`] = `
{
  "dump": [Function],
  "errorCount": 0,
  "errors": [],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 2,
  "tests": {
    "confirm": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "password": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "username": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`more complex > Should run correctly 4`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "password",
      "groupName": undefined,
      "message": "password is required",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "password is required",
      "path": [
        "password",
      ],
    },
  ],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "confirm": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "password": SummaryBase {
      "errorCount": 1,
      "errors": [
        "password is required",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "username": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;

exports[`more complex > Should run correctly 6`] = `
{
  "dump": [Function],
  "errorCount": 1,
  "errors": [
    SummaryItem {
      "fieldName": "password",
      "groupName": undefined,
      "message": "password is required",
    },
  ],
  "getError": [Function],
  "getErrors": [Function],
  "getErrorsByGroup": [Function],
  "getMessage": [Function],
  "getSuccess": [Function],
  "getSuccesses": [Function],
  "getSuccessesByGroup": [Function],
  "getWarning": [Function],
  "getWarnings": [Function],
  "getWarningsByGroup": [Function],
  "groups": {},
  "hasErrors": [Function],
  "hasErrorsByGroup": [Function],
  "hasSuccesses": [Function],
  "hasSuccessesByGroup": [Function],
  "hasWarnings": [Function],
  "hasWarningsByGroup": [Function],
  "isPending": [Function],
  "isTested": [Function],
  "isValid": [Function],
  "isValidByGroup": [Function],
  "issues": [
    {
      "message": "password is required",
      "path": [
        "password",
      ],
    },
  ],
  "pendingCount": 0,
  "success": [],
  "successCount": 0,
  "testCount": 3,
  "tests": {
    "confirm": SummaryBase {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 0,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "password": SummaryBase {
      "errorCount": 1,
      "errors": [
        "password is required",
      ],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 1,
      "valid": false,
      "warnCount": 0,
      "warnings": [],
    },
    "username": {
      "errorCount": 0,
      "errors": [],
      "pendingCount": 0,
      "success": [],
      "successCount": 0,
      "testCount": 2,
      "valid": true,
      "warnCount": 0,
      "warnings": [],
    },
  },
  "types": undefined,
  "valid": false,
  "warnCount": 0,
  "warnings": [],
}
`;
